media query fixes and added overflow scroll on saved games

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -1,5 +1,9 @@
 /* General Styles */
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
 }
@@ -19,5 +23,5 @@ ul {
   position: fixed;
   bottom: -3rem;
   right: -3.5rem;
-  z-index: 5;
+  z-index: -1;
 }
