--- a/src/styles/_savedGames.scss
+++ b/src/styles/_savedGames.scss
@@ -12,13 +12,21 @@ h2::before {
   top: 6rem;
   right: 1rem;
   transform: rotate(10deg);
+  z-index: -1;
+}
+
+.gamesContainer {
+  display: block;
+  height: 50rem;
+  overflow-y: scroll;
+  border: 0.2rem solid $darkPurple;
+  border-radius: 1rem;
 }
 
 .savedGames {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 10rem;
   li {
     width: 100%;
   }
