--- a/src/styles/_trivia.scss
+++ b/src/styles/_trivia.scss
@@ -66,7 +66,7 @@
   border: none;
   cursor: pointer;
   position: relative;
-  bottom: 490px;
-  right: -260px;
+  bottom: 50rem;
+  right: -26rem;
   transition: all 0.3s ease;
 }
